-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.3.0
-
None
-
685fc8a2e26cfde007862cf61fe9618dcdcf97e8
Using the /DUMPGRAPHDOT command line option causes the following command line parsing error:
Error: unknown command line option 'O' in arguments: '/L', '/R', '/DUMPGRAPHDOT', '-j1', '-f', 'makefile_xml'
In my opinion this is due to a bug in /src/jomlib/options.cpp, where the corresponding case is unreachable, as can be seen here:
} else if (upperArg.startsWith(QLatin1String("DUMPGRAPH")))
{ arg.remove(0, 9); dumpDependencyGraph = true; showLogo = false; }else if (upperArg.startsWith(QLatin1String("DUMPGRAPHDOT")))
{ arg.remove(0, 12); dumpDependencyGraph = true; dumpDependencyGraphDot = true; showLogo = false; }| For Gerrit Dashboard: QTCREATORBUG-14004 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 106804,2 | fix /DUMPGRAPHDOT option | master | qt-labs/jom | Status: MERGED | +2 | 0 |