fix /DUMPGRAPHDOT option

Task-number: QTCREATORBUG-14004
Change-Id: Id608fc007836cce9d6ab4cf6caf6825bdca4f440
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>